Remove deprecated economy-related classes and implementations.
This commit removes obsolete economy-related classes, interfaces, and implementations. The code cleanup includes `AbstractEconomy`, `Benefit`, `DepositEconomyOperation`, and economy implementations like `Economy_Vault` and `Economy_VaultUnlocked`. These were either redundant or replaced by new approaches.